fixes for the linux platform

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -67,7 +67,7 @@ ifdef OMNI_HOME
    EXEC_TAG =
 endif
 
-ifdef ACE_ROOT
+ifeq ($(TAO_BUILD), TRUE)
    FUTUREGEN_HOME = ${VE_SUITE_HOME}/futuregen
 
    vpath %.cxx    ${CONDUCTOR_BASE_DIR}/impl 
@@ -316,8 +316,8 @@ DEBUG_APP?=		TRUE
 
 #Scene Graph Specific flags
 #Can be: _PERFORMER, _OPENSG, _OSG
-EXTRA_CXXFLAGS+=	-D_PERFORMER -I${VE_SUITE_HOME}/VE_SceneGraph
-
+EXTRA_CXXFLAGS+=	-D_PERFORMER -I${VE_SUITE_HOME}/VE_SceneGraph -m32
+EXTRA_LIBS+= -m32
 # vtkActorToPF needs VTK4 and VTK44
 EXTRA_CXXFLAGS+= -DVTK4 -DVTK44 $(WX_CXX) -D WXUSING_PLUGIN_DLL
 #$(EXTRA_FLAGS) 
@@ -360,7 +360,8 @@ CXX_GEN_DIR=		.
                         ${CONDUCTOR_BASE_DIR}/java_stuff/ObserverPackage \
                         ${CONDUCTOR_BASE_DIR}/java_stuff/VjObsPackage 
 
-vpath %.cpp $(CXX_GEN_DIR) ${CONDUCTOR_BASE_DIR}/skel ${VE_SUITE_HOME}/VE_SceneGraph
+vpath %.cpp $(CXX_GEN_DIR) ${CONDUCTOR_BASE_DIR}/skel
+vpath %.cxx  ${VE_SUITE_HOME}/VE_SceneGraph
 #vpath %.cc ./UMI/skel
 #vpath %.h $(CXX_GEN_DIR)  ${CONDUCTOR_BASE_DIR}/skel
 
