fixes to Makefile for

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -181,7 +181,8 @@ SRCS=\
    cfdPfSceneManagement.cxx \
    cfdAppWrapper.cxx \
    cfdVjObsWrapper.cxx \
-   cfdThread.cxx
+   cfdThread.cxx \
+   cfdVEXplorer.cxx
 
 ifeq ($(TAO_BUILD), TRUE)
 SRCS+= \
