--- a/futuregen/VE_UI/Makefile
+++ b/futuregen/VE_UI/Makefile
@@ -166,7 +166,7 @@ DEBUG_APP?=		TRUE
 #OPTIM_APP?=		TRUE
 
 # vtkActorToPF needs VTK4 and VTK44
-EXTRA_CXXFLAGS+= $(WX_CXX) -D WXUSING_PLUGIN_DLL
+EXTRA_CXXFLAGS+= $(WX_CXX) -D WXUSING_PLUGIN_DLL -m32
 #$(EXTRA_FLAGS) 
 
 #EXTRA_DEBUG_FLAGS+=	-g -D_DEBUG -gslim 
@@ -174,11 +174,11 @@ EXTRA_OPTIM_FLAGS+=	-O2 -OPT:Olimit=0 -D_OPT
 
 ifeq ($(TAO_BUILD), TRUE)
    EXTRA_CXXFLAGS+=	-D_TAO ${CPPFLAGS} -I$(BOOST_INCLUDES)
-   EXTRA_LIBS+= ${ACE_LIBS} $(WX_LIB)
+   EXTRA_LIBS+= ${ACE_LIBS} $(WX_LIB)  -m32
    #$(VLDLIBS)
 else
    EXTRA_CXXFLAGS+=	$(TWEEK_CXX_FLAGS) $(CORBA_DEFINES) -I$(BOOST_INCLUDES)
-   EXTRA_LIBS+= $(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS) $(OMNILIB) $(WX_LIB)
+   EXTRA_LIBS+= $(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS) $(OMNILIB) $(WX_LIB)  -m32
 endif
 
 LINKALL_ON=		-all
