CLUSTER_APP and TAO_BUILD can now defined as TRUE or FALSE from outside the setup script. If not set externally, they default to FALSE in the setup script. This allows the identical setup script and VE_Xplorer Makefile to be used for all builds

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -33,8 +33,7 @@
 #
 #_______________________________CUSTOM OPTIONS__________________________________
 #
-# Uncomment this line if you want to build a cluster juggler app
-#CLUSTER_APP = TRUE
+# CLUSTER_APP now is defined as TRUE or FALSE from the setup script
 #_______________________________________________________________________________
 
 CONDUCTOR_BASE_DIR= ${VE_SUITE_HOME}/VE_Conductor
