--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -319,7 +319,7 @@ DEBUG_APP?=		TRUE
 EXTRA_CXXFLAGS+=	-D_PERFORMER -I${VE_SUITE_HOME}/VE_SceneGraph -m32
 EXTRA_LIBS+= -m32
 # vtkActorToPF needs VTK4 and VTK44
-EXTRA_CXXFLAGS+= -DVTK4 -DVTK44 $(WX_CXX) -D WXUSING_PLUGIN_DLL
+EXTRA_CXXFLAGS+= -DVTK4 -DVTK44 $(WX_CXX) -DWXUSING_PLUGIN_DLL -DWXUSINGDLL=1
 #$(EXTRA_FLAGS) 
 
 #EXTRA_DEBUG_FLAGS+=	-g -D_DEBUG -gslim 
