update unit names to match netwrok string

--- a/VE_Models/JD_Engine/ExteriorGraphicalPlugin/Makefile
+++ b/VE_Models/JD_Engine/ExteriorGraphicalPlugin/Makefile
@@ -118,7 +118,7 @@ DEBUG_APP?=		TRUE
 #OPTIM_APP?=		TRUE
 
 # vtkActorToPF needs VTK4
-EXTRA_CXXFLAGS+=	$(WX_CXX) -D WXUSING_PLUGIN_DLL -D_PERFORMER -DVTK4 -m32
+EXTRA_CXXFLAGS+=	$(WX_CXX) -DWXUSING_PLUGIN_DLL -D_PERFORMER -DVTK4 -m32 -DWXUSINGDLL=1
 #$(EXTRA_FLAGS) 
 
 EXTRA_CXXFLAGS+=	-D_TAO ${CPPFLAGS} -I$(BOOST_INCLUDES) -I${VE_SUITE_HOME}/VE_SceneGraph
