--- a/VE_Designer/Makefile
+++ b/VE_Designer/Makefile
@@ -2,17 +2,9 @@
 # MAKEFILE
 #_______________________________________________________________________________
 #
-#_______________________________CUSTOM OPTIONS__________________________________
-#
-# Uncomment this line if you want to build a cluster juggler app
-#CLUSTER_APP = TRUE
-#
-# Uncomment the following line to use cfdSequence instead of pfSequence.
-# (It is automatically turned on for cluster builds.)
-#EXTRA_CXXFLAGS+= -D_USE_CFD_SEQUENCE
-#__________________________________________________________
 
 CONDUCTOR_BASE_DIR= ${VE_SUITE_HOME}/VE_Conductor
+CFDUNAME = $(shell uname)
 
 # If OMNI_HOME was defined in the script setup.tsh, 
 # then define CORBA_DEFINES, and CORBA_INCLUDES.
@@ -22,7 +14,7 @@ ifdef OMNI_HOME
 
    CORBA_DEFINES = -D__OSVERSION__=6 
 
-   ifeq (`uname`, Linux)
+   ifeq ($(CFDUNAME),Linux)
       CORBA_DEFINES += -D__x86__ -D__linux__
       OMNI_LIB = ${OMNI_HOME}/lib
    else
@@ -33,8 +25,8 @@ ifdef OMNI_HOME
    OMNILIB = -L${OMNI_LIB} -lomniORB4 -lomnithread -lomniDynamic4
    
    CORBA_INCLUDES = -I${OMNI_HOME}/include 
-   EXTRA_INCLUDES+=	-I${CONDUCTOR_BASE_DIR}/impl \
-                     -I${CONDUCTOR_BASE_DIR}/skel \
+   EXTRA_INCLUDES+= -I${CONDUCTOR_BASE_DIR}/impl \
+                    -I${CONDUCTOR_BASE_DIR}/skel \
                      ${CORBA_INCLUDES}
 endif
 
@@ -59,7 +51,7 @@ ifdef ACE_ROOT
    ACE_LIBS = -L${ACE_ROOT}/ace -lACE -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_PortableServer -L${TAO_ROOT}/tao -lTAO 
 #${LDFLAGS}
    ACE_INCLUDES = -I${TAO_ROOT}/orbsvcs
-   EXTRA_INCLUDES+=	\
+   EXTRA_INCLUDES+= \
                   ${ACE_INCLUDES} \
                   -I${CONDUCTOR_BASE_DIR}/skel \
                   -I${CONDUCTOR_BASE_DIR}/tao_impl \
@@ -69,21 +61,20 @@ endif
 
 #__________________________________________________________
 # Operating System Specific stuff
-ifeq (`uname`, Linux)
+ifeq ($(CFDUNAME),Linux)
  #  EXTRA_FLAGS = -O2 -DHAVE_CONFIG_H
 endif
 
 # list the source files that are in current directory
 SRCS=\
-	cfdVeModel.cpp \
-	cfdVeView.cpp	\
-	cfdVeController.cpp \
-	cfdSubjectBase.cpp \
-	cfdObserverBase.cpp \
-	VjDesignObs.cpp
+   cfdVeModel.cpp \
+   cfdVeView.cpp \
+   cfdVeController.cpp \
+   cfdSubjectBase.cpp \
+   cfdObserverBase.cpp \
+   VjDesignObs.cpp
 
 #   cfdDrawManager.cxx
-
 
 #   Observer.cpp \
 #   CorbaManager.cxx \
@@ -103,10 +94,10 @@ include $(VE_SUITE_HOME)/VE_Installer/dzr.vtk.mk
 # for multiple platforms may be maintained simultaneously.
 
 #OBJDIR is the place that the object files are stored.
-OBJDIR=	$(CFDHOSTTYPE)
+OBJDIR= $(CFDHOSTTYPE)
 
 #DEPDIR is the place that the dependency files are stored.
-DEPDIR=	$(CFDHOSTTYPE)
+DEPDIR= $(CFDHOSTTYPE)
 
 #__________________________________________________________
 # Where is Paul Rajlich's vtkActorToPF directory?
@@ -116,7 +107,7 @@ DEPDIR=	$(CFDHOSTTYPE)
 # -----------------------------------------------------------------------------
 # following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
 
- APP_NAME= project
+APP_NAME=project
 
 default: all
 
@@ -132,10 +123,10 @@ all:
 #	$(MAKE) NetworkTestBean.jar
 #	-$(MAKE) install
 
-srcdir=		.
+srcdir= .
 
 # turn off dependencies for idl stuff, make clean
-NO_DEPEND=	YES
+NO_DEPEND= YES
 
 include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
 include $(DZR_BASE_DIR)/ext/vrjuggler/dzr.vrjuggler.pfapp.mk
@@ -147,12 +138,12 @@ include $(DZR_BASE_DIR)/ext/vrjuggler/dzr.vrjuggler.pfapp.mk
                ${CONDUCTOR_BASE_DIR}/VjObs.h 
 
 # list the cpp and h files here
-#IDL_CXX_FILES=	SliderSubject.cpp SliderSubject.h		\
-		WhiteboardSubject.cpp WhiteboardSubject.h
+#IDL_CXX_FILES= SliderSubject.cpp SliderSubject.h \
+WhiteboardSubject.cpp WhiteboardSubject.h
 
 # list the corresponding java files that are in directory "networktest"
-#IDL_JAVA_FILES=	SliderSubject.java	\
-		WhiteboardSubject.java
+#IDL_JAVA_FILES= SliderSubject.java \
+WhiteboardSubject.java
 
 #JAVA_SRCS=  ObserverHolder.java \
             VjObsHolder.java \
@@ -176,54 +167,54 @@ include $(DZR_BASE_DIR)/ext/vrjuggler/dzr.vrjuggler.pfapp.mk
 #ALL_CLASSES= *.class
 #EXTRA_SOURCEPATH_DIRS= ${CONDUCTOR_BASE_DIR}/java_stuff
 #CLASSPATH= ${CONDUCTOR_BASE_DIR}/java_stuff
-#CLASSPATH_ARG=	-classpath "${CONDUCTOR_BASE_DIR}/java_stuff"
+#CLASSPATH_ARG= -classpath "${CONDUCTOR_BASE_DIR}/java_stuff"
 
 # One of these must be uncommented.
-DEBUG_APP?=		TRUE
-#OPTIM_APP?=		TRUE
+DEBUG_APP?= TRUE
+#OPTIM_APP?= TRUE
 
 # vtkActorToPF needs VTK4
-EXTRA_CXXFLAGS+=	-DVTK4 -DTABLET
+EXTRA_CXXFLAGS+= -DVTK4 -DVTK44 -DTABLET
 EXTRA_LIBS+= -L${HOME}/software/IRIX/lib -lcppdom
 EXTRA_INCLUDES+= -I${HOME}/software/IRIX/include
 #$(EXTRA_FLAGS) 
 
-#EXTRA_DEBUG_FLAGS+=	-g -D_DEBUG -gslim 
-EXTRA_OPTIM_FLAGS+=	-O2 -OPT:Olimit=0 -D_OPT
+#EXTRA_DEBUG_FLAGS+= -g -D_DEBUG -gslim 
+EXTRA_OPTIM_FLAGS+= -O2 -OPT:Olimit=0 -D_OPT
 ifeq ($(TAO_BUILD), TRUE)
-   EXTRA_CXXFLAGS+=	-D_TAO ${CPPFLAGS} -I$(BOOST_INCLUDES)
+   EXTRA_CXXFLAGS+= -D_TAO ${CPPFLAGS} -I$(BOOST_INCLUDES)
    EXTRA_LIBS+= ${ACE_LIBS} 
    #$(VLDLIBS)
 else
-   EXTRA_CXXFLAGS+=	$(TWEEK_CXX_FLAGS) $(CORBA_DEFINES) -I$(BOOST_INCLUDES)
+   EXTRA_CXXFLAGS+= $(TWEEK_CXX_FLAGS) $(CORBA_DEFINES) -I$(BOOST_INCLUDES)
    EXTRA_LIBS+= $(TWEEK_LIBS) $(TWEEK_EXTRA_LIBS) $(OMNILIB) 
 endif
 
-LINKALL_ON=		-all
-LINKALL_OFF=		
+LINKALL_ON= -all
+LINKALL_OFF= 
 
-STATIC_ON=		@APP_LINK_STATIC_ON@
-STATIC_OFF=		@APP_LINK_STATIC_OFF@
+STATIC_ON= @APP_LINK_STATIC_ON@
+STATIC_OFF= @APP_LINK_STATIC_OFF@
 
-#CLASSPATH=		$(TWEEK_JARS)
+#CLASSPATH= $(TWEEK_JARS)
 
-CXX_GEN_DIR=		.
-#CXX_IDL=		$(TWEEK_IDL_CXX)
-#CXX_IDL_OPTS=		$(TWEEK_IDLFLAGS_CXX)			\
-			$(TWEEK_IDL_GENDIR_CXX)$(CXX_GEN_DIR)
-#CXX_IDL_INCLUDES=	
+CXX_GEN_DIR= .
+#CXX_IDL= $(TWEEK_IDL_CXX)
+#CXX_IDL_OPTS= $(TWEEK_IDLFLAGS_CXX) \
+ $(TWEEK_IDL_GENDIR_CXX)$(CXX_GEN_DIR)
+#CXX_IDL_INCLUDES= 
 
-#JAVA_GEN_DIR=		$(CONDUCTOR_BASE_DIR)/java_stuff
-#JAVA_IDL=		$(TWEEK_IDL_JAVA)
-#JAVA_IDL_OPTS=		$(TWEEK_IDLFLAGS_JAVA)			\
-			$(TWEEK_IDL_GENDIR_JAVA)$(JAVA_GEN_DIR)
-#JAVA_IDL_INCLUDES=	
+#JAVA_GEN_DIR= $(CONDUCTOR_BASE_DIR)/java_stuff
+#JAVA_IDL= $(TWEEK_IDL_JAVA)
+#JAVA_IDL_OPTS= $(TWEEK_IDLFLAGS_JAVA) \
+ $(TWEEK_IDL_GENDIR_JAVA)$(JAVA_GEN_DIR)
+#JAVA_IDL_INCLUDES= 
 
 #WARN_MSG= I_AM_HERE
 #EXTRA_PATH_FOR_SOURCES= ${CONDUCTOR_BASE_DIR} \
-                        ${CONDUCTOR_BASE_DIR}/java_stuff \
-                        ${CONDUCTOR_BASE_DIR}/java_stuff/ObserverPackage \
-                        ${CONDUCTOR_BASE_DIR}/java_stuff/VjObsPackage 
+                         ${CONDUCTOR_BASE_DIR}/java_stuff \
+                         ${CONDUCTOR_BASE_DIR}/java_stuff/ObserverPackage \
+                         ${CONDUCTOR_BASE_DIR}/java_stuff/VjObsPackage 
 
 vpath %.cpp $(CXX_GEN_DIR) ${CONDUCTOR_BASE_DIR}/skel
 #vpath %.cc ./UMI/skel
@@ -262,16 +253,16 @@ install:
 # in addition to the created *.o files and any core files, the following files will be removed during "gmake clean"
 CLEAN_FILES+= $(APP_NAME)
 #CLEAN_FILES+= $(APP_NAME) *.d
-#CLEAN_FILES+=	CorbaManager.o \
-      $(addprefix $(srcdir)/, $(IDL_CXX_FILES))		\
-		$(addprefix $(srcdir)/networktest/, $(IDL_JAVA_FILES))	\
-      $(CONDUCTOR_BASE_DIR)/*.d \
-		$(CLASSES) tweek/*.class
+#CLEAN_FILES+= CorbaManager.o \
+               $(addprefix $(srcdir)/, $(IDL_CXX_FILES)) \
+               $(addprefix $(srcdir)/networktest/, $(IDL_JAVA_FILES)) \
+               $(CONDUCTOR_BASE_DIR)/*.d \
+               $(CLASSES) tweek/*.class
 
 #  in addition to the "ii_files" directory, the following directories will be removed during "gmake clean"
-#CLEAN_DIRS+=	$(srcdir)/tweek
+#CLEAN_DIRS+= $(srcdir)/tweek
 
-#CLOBBER_FILES+=	NetworkTestBean.jar
+#CLOBBER_FILES+= NetworkTestBean.jar
 
 # DO NOT DELETE THIS LINE -- g++dep uses it.
 # DO NOT PUT ANYTHING AFTER THIS LINE, IT WILL GO AWAY.
