minor updates to fix bugs for demos and to raise debug level

--- a/VE_Models/JD_Engine/EngineUnit/Makefile
+++ b/VE_Models/JD_Engine/EngineUnit/Makefile
@@ -16,7 +16,7 @@ ifndef TAO_ROOT
   TAO_ROOT = $(ACE_ROOT)/TAO
 endif # ! TAO_ROOT
 
-APP = CoolingUnitApp
+APP = EngineUnitApp
 
 LDLIBS = -lTAO_CosNaming -lTAO_Svc_Utils -lTAO_IORTable -lTAO_Messaging -lTAO_PortableServer -lTAO
 
