fixes for cluster build. commits probably break windows tao build but should be easy to fix

--- a/VE_Conductor/Makefile
+++ b/VE_Conductor/Makefile
@@ -76,15 +76,14 @@ CLASSPATH=		$(TWEEK_JARS)
 
 CXX_GEN_DIR=	$(srcdir)/skel
 ifeq (${TAO_BUILD}, TRUE)
-   CXX_IDL=		${TAO_ROOT}/TAO_IDL/tao_idl
+   CXX_IDL=      ${TAO_ROOT}/TAO_IDL/tao_idl
    CXX_IDL_OPTS=  -o $(CXX_GEN_DIR) -GI -I./idl
 else
-   CXX_IDL=		omniidl
-   #CXX_IDL=		$(TWEEK_IDL_CXX)
-   CXX_IDL_OPTS=		$(TWEEK_IDLFLAGS_CXX)			\
-			$(TWEEK_IDL_GENDIR_CXX)$(CXX_GEN_DIR)
+  CXX_IDL=    omniidl
+  #CXX_IDL=      $(TWEEK_IDL_CXX)
+  CXX_IDL_OPTS= $(TWEEK_IDLFLAGS_CXX) $(TWEEK_IDL_GENDIR_CXX)$(CXX_GEN_DIR)
 endif
-CXX_IDL_INCLUDES=	
+#CXX_IDL_INCLUDES=	
 
 JAVA_GEN_DIR=		$(srcdir)/java_stuff
 JAVA_IDL=		idlj
