minor fixes. package.h needs to be fixed so that it will build on windows and unix without having to change the code. should be easy to do just need to add some #defines

--- a/futuregen/Unit/Makefile
+++ b/futuregen/Unit/Makefile
@@ -12,7 +12,7 @@ clean:
 	find . -name "*Unit" -exec echo "cd {}; make clean; cd .." > cleaning.sh \;
 	chmod +x cleaning.sh
 	./cleaning.sh
-	rm cleaning.sh
-	rm building.sh
-	rm start.sh
-	rm end.sh
+	rm -f cleaning.sh
+	rm -f building.sh
+	rm -f start.sh
+	rm -f end.sh
