updates to begine to fix static function calls in cfdObjects. this probably busted a whole bunch of stuff but in the long run the code will be much cleaner and easier to understand

--- a/VE_Xplorer/Makefile
+++ b/VE_Xplorer/Makefile
@@ -110,6 +110,11 @@ ifeq (${CFDUNAME},Linux)
    EXTRA_LIBS+= -m32
 endif
 
+# 64-bit linux needs these flags
+ifeq (${CFDUNAME},IRIX64)
+#   EXTRA_CXXFLAGS+= -m32
+   EXTRA_LIBS+= -L/usr/freeware/lib32
+endif
 #__________________________________________________________
 # list the source files that are in current directory
 SRCS=\
